--- a/package.json
+++ b/package.json
@@ -1,60 +1,63 @@
 {
-  "name": "angular-angular2",
+  "name": "angular-study-demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "angular study demo",
   "main": "index.js",
+  "scripts": {
+    "clean": "rimraf dist",
+    "build":"npm run clean && webpack --progress --color",
+    "start": "./node_modules/.bin/webpack-dev-server --progress --color"
+  },
+  "author": "xiaomo <83387856@qq.com>",
+  "license": "MIT",
   "dependencies": {
-    "angular": "^1.5.3",
-    "bootstrap": "^3.3.6",
-    "jquery": "^2.2.3",
-    "ui-router": "^1.0.0-alpha.3"
+    "@angular/common": "2.0.0-rc.2",
+    "@angular/compiler": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.2",
+    "@angular/http": "2.0.0-rc.2",
+    "@angular/platform-browser": "2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
+    "@angular/router": "2.0.0-rc.2",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "base64id": "0.1.0",
+    "bootstrap-sass": "3.3.5",
+    "chunk-manifest-webpack-plugin": "0.0.1",
+    "core-js": "2.2.2",
+    "css-loader": "0.15.5",
+    "extract-text-webpack-plugin": "0.8.2",
+    "file-loader": "0.8.4",
+    "html-webpack-plugin": "1.6.0",
+    "imports-loader": "0.6.4",
+    "lodash": "3.10.1",
+    "moment": "2.10.6",
+    "node-libs-browser": "0.5.3",
+    "node-sass": "3.4.2",
+    "optimist": "0.6.1",
+    "raw-loader": "0.5.1",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "sass-loader": "1.0.2",
+    "script-loader": "0.6.1",
+    "style-loader": "0.12.3",
+    "ts-helpers": "1.1.1",
+    "tslint": "3.7.0-dev.2",
+    "typescript": "1.9.0-dev.20160409",
+    "typings": "0.8.1",
+    "url-loader": "0.5.6",
+    "uuid": "2.0.1",
+    "val-loader": "0.5.0",
+    "webpack": "1.10.1",
+    "webpack-dev-server": "1.10.1",
+    "webpack-reload-plugin": "0.1.2",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
-    "autoprefixer": "^6.0.3",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^2.7.1",
-    "isparta-instrumenter-loader": "^1.0.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.14",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "node-libs-browser": "^1.0.0",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.4",
-    "postcss-loader": "^0.8.0",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "scripts": {
-    "build": "rimraf dist && webpack --bail --progress --profile",
-    "server": "webpack-dev-server --history-api-fallback --inline --progress",
-    "test": "karma start",
-    "test-watch": "karma start --auto-watch --no-single-run",
-    "start": "npm run server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/qq83387856/angular-angular2.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qq83387856/angular-angular2/issues"
-  },
-  "homepage": "https://github.com/qq83387856/angular-angular2#readme"
+    "ts-loader": "0.7.2",
+    "live-server": "0.7.1",
+    "on-build-webpack": "0.1.0",
+    "traceur-loader": "0.6.3",
+    "tslint-loader": "1.0.1",
+    "typescript": "1.7.3",
+    "webpack-notifier": "1.2.1"
+  }
 }
