--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "1.9.0-dev.20160409",
     "typings": "0.8.1",
     "url-loader": "0.5.6",
-    "uuid": "2.0.1",
+    "uuid": "^2.0.2",
     "val-loader": "0.5.0",
     "webpack": "1.10.1",
     "webpack-dev-server": "1.10.1",
