--- a/package.json
+++ b/package.json
@@ -11,19 +11,34 @@
   "author": "xiaomo <83387856@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/router": "2.0.0-rc.2",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/forms": "^0.1.1",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/router": "3.0.0-alpha.7",
     "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "^2.0.0-rc.3",
     "base64id": "0.1.0",
     "bootstrap": "^4.0.0-alpha.2",
     "bootstrap-sass": "3.3.5",
-    "chunk-manifest-webpack-plugin": "0.0.1",
     "core-js": "2.2.2",
+    "rxjs": "5.0.0-beta.6",
+    "typescript": "1.9.0-dev.20160409",
+    "typings": "0.8.1",
+    "zone.js": "0.6.12"
+  },
+  "devDependencies": {
+    "ts-loader": "0.7.2",
+    "live-server": "0.7.1",
+    "on-build-webpack": "0.1.0",
+    "url-loader": "0.5.6",
+    "uuid": "^2.0.2",
+    "chunk-manifest-webpack-plugin": "0.0.1",
+    "val-loader": "0.5.0",
+    "webpack": "1.10.1",
     "css-loader": "0.15.5",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
@@ -36,26 +51,13 @@
     "optimist": "0.6.1",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
     "sass-loader": "1.0.2",
     "script-loader": "0.6.1",
     "style-loader": "0.12.3",
     "ts-helpers": "1.1.1",
     "tslint": "3.7.0-dev.2",
-    "typescript": "1.9.0-dev.20160409",
-    "typings": "0.8.1",
-    "url-loader": "0.5.6",
-    "uuid": "^2.0.2",
-    "val-loader": "0.5.0",
-    "webpack": "1.10.1",
     "webpack-dev-server": "1.10.1",
     "webpack-reload-plugin": "0.1.2",
-    "zone.js": "0.6.12"
-  },
-  "devDependencies": {
-    "ts-loader": "0.7.2",
-    "live-server": "0.7.1",
-    "on-build-webpack": "0.1.0",
     "traceur-loader": "0.6.3",
     "tslint-loader": "1.0.1",
     "typescript": "1.7.3",
